<resources>
    <string name="app_name">Test</string>
    <string name="server">Server</string>
    <string name="port">Port</string>
    <string name="connect">Connect</string>
    <string name="client">Client</string>
    <string name="adresa">Adresa</string>
    <string name="send_request">Send Request</string>
    <string name="key">op1</string>
    <string name="value">op2</string>
</resources>